--- a/backend/fork_and_star_backend/requirements.txt
+++ b/backend/fork_and_star_backend/requirements.txt
@@ -1,25 +1,23 @@
-annotated-types==0.7.0
-anyio==4.9.0
-bcrypt==4.3.0
-cffi==1.17.1
-click==8.2.1
-cryptography==45.0.5
-ecdsa==0.19.1
-fastapi==0.116.1
-h11==0.16.0
+cachetools==5.5.2
+certifi==2025.7.14
+charset-normalizer==3.4.2
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-bigquery==3.35.0
+google-cloud-core==2.4.3
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.73.1
+grpcio-status==1.73.1
 idna==3.10
-passlib==1.7.4
-psycopg2-binary==2.9.10
+packaging==25.0
+proto-plus==1.26.1
+protobuf==6.31.1
 pyasn1==0.6.1
-pycparser==2.22
-pydantic==2.11.7
-pydantic_core==2.33.2
-python-jose==3.5.0
+pyasn1_modules==0.4.2
+python-dateutil==2.9.0.post0
+requests==2.32.4
 rsa==4.9.1
 six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-starlette==0.47.1
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-uvicorn==0.35.0
+urllib3==2.5.0
