--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,24 +7,23 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        build-essential \
-        curl \
-    && rm -rf /var/lib/apt/lists/*
+ && apt-get install -y --no-install-recommends \
+    build-essential \
+    curl \
+ && rm -rf /var/lib/apt/lists/*
 
 # Copy backend code
 COPY fork_and_star_backend/ .
 
 RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
+ && pip install --no-cache-dir -r requirements.txt
 
 RUN useradd --create-home --shell /bin/bash app \
-    && chown -R app:app /app
+ && chown -R app:app /app
+
 USER app
 
-EXPOSE 8000
+EXPOSE $PORT
 
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/ || exit 1
-
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use main:app since main.py is in root, not app/main.py
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port $PORT"]
