--- a/render.yaml
+++ b/render.yaml
@@ -11,3 +11,7 @@ services:
     envVars:
       - key: PORT
         value: 8000
+      - key: GCP_PROJECT_ID
+        sync: true
+      - key: GOOGLE_CREDENTIALS_B64
+        sync: true
